# s3cli

./: .gitignore  Cargo.toml  README.md  justfile  rust-toolchain.toml  rustfmt.toml  test.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  s3_async_util.rs  s3_cfg_util.rs
tests/: test.rs
